# rpgp

./: .codespellrc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PLATFORMS.md  README.md  SECURITY.md  STATUS.md  appveyor.yml  azure-pipelines.yml  build.rs  cliff.toml  deny.toml  message_decryption.profile  message_parse.profile  release.toml  result  rust-toolchain  rustfmt.toml  test
.cargo/: config.toml
.circleci/: config.yml
.github/: dependabot.yml  zizmor.yml
benches/: benches_main.rs  (+3 more)
ffi/: Cargo.toml  Makefile  build.rs  pgp.pc.in
ffi/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/dictionaries/: manual_header_footer.dict
fuzz/fuzz_targets/: 10_signed_secret_key_from_bytes.rs  11_cleartext_signed_message_from_armor.rs  12_cleartext_signed_message_from_string.rs  12_signature_from_armor_single.rs  13_signature_from_armor_single.rs  13_signature_from_binary.rs  14_base64_decoder.rs  15_dearmor_parser.rs  16_message_decryption_legacy.rs  17_message_decryption.rs  18_draft_wussler_forwarding_generate_proxy_parameter.rs  19_draft_wussler_forwarding_transform.rs  1_message_from_bytes.rs  2_message_from_string.rs  3_message_from_armored.rs  4_message_roundtrip_check.rs  5_message_decryption.rs  6_message_signing.rs  7_signed_key_from_binary.rs  8_signed_public_key_from_armored.rs  9_signed_public_key_from_binary.rs
pgp-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  rpgp.pc.in
pgp-ffi/src/: cvec.rs  errors.rs  hash.rs  key.rs  lib.rs  macros.rs  message.rs  public_key.rs  secret_key.rs
tests/openpgp/: 4gb-packet.asc  4gb-packet.scm  ChangeLog-2011  Makefile.am  README  all-tests.scm  armdetach.scm  armdetachm.scm  armencrypt.scm  armencryptp.scm  armor.scm  armsignencrypt.scm  armsigs.scm  bug1223-bogus.asc  bug1223-good.asc  bug537-test.data.asc  bug894-test.asc  clearsig.scm  compression.scm  conventional-mdc.scm  conventional.scm  decrypt-dsa.scm  decrypt-multifile.scm  decrypt-session-key.scm  decrypt-unwrap-verify.scm  decrypt.scm  default-key.scm  defs.scm  delete-keys.scm  detach.scm  detachm.scm  ecc.scm  enarmor.scm  encrypt-dsa.scm  encrypt-multifile.scm  encrypt.scm  encryptp.scm  export.scm  fake-pinentry.c  forged-keyring.pgp  (+49 more)
tests/openpgp/key-selection/: 0.asc  1.asc  2.asc  3.asc  4.asc
tests/openpgp/privkeys/: 00FE67F28A52A8AA08FFAED20AF832DA916D1985.asc  0D6F6AD4C4C803B25470F9104E9F4E6A4CA64255.asc  0DD40284FF992CD24DC4AAC367037E066FCEE26A.asc  13FDB8809B17C5547779F9D205C45F47CE0217CE.asc  1DF48228FEFF3EC2481B106E0ACA8C465C662CC5.asc  1E28F20E41B54C2D1234D896096495FF57E08D18.asc  2BC997C0B8691D41D29A4EC81CCBCF08454E4961.asc  343D8AF79796EE107D645A2787A9D9252F924E6F.asc  3C9D5ECA70130C2DBB1FC6AC0076BEEEC197716F.asc  449E644892C951A37525654730DD32C202079926.asc  4DF9172D6FF428C97A0E9AA96F03E8BCE3B2F188.asc  50B2D4FA4122C212611048BC5FC31BD44393626E.asc  58FFE844087634E62440224908BDE44BEA7EB730.asc  6E6B7ED0BD4425018FFC54F3921D5467A3AE00EB.asc  76F7E2B35832976B50A27A282D9B87E44577EB66.asc  7E201E28B6FEB2927B321F443205F4724EBE637E.asc  8B5ABF3EF9EB8D96B91A0B8C2C4401C91C834C34.asc  9D7CD8F53F2F14C3E2177D1E9D1D11F39513A4A4.asc  A0747D5F9425E6664F4FFBEED20FBCA79FDED2BD.asc  A2832820DC9F40751BDCD375BB0945BA33EC6B4C.asc  ADE710D74409777B7729A7653373D820F67892E0.asc  B2BAA7144303DF19BB6FDE23781DD3FDD97918D4.asc  C6A6390E9388CDBAD71EAEA698233FE5E04F001E.asc  C905D0AB6AE9655C5A35975939997BBF3325D6DD.asc  CEFC51AF91F68A2904FBFF62C4F075A4785B803F.asc  CF60965BF51F67CF80DECE853E0D2D343468571D.asc  D69102E0F5AC6B6DB8E4D16DA8E18CF46D88CAE3.asc  DF00E361D34F80868D06879AC21D7A7D4E4FAD76.asc  EB33B687EB8581AB64D04852A54453E85F3DF62D.asc  FD692BD59D6640A84C8422573D469F84F3B98E53.asc
tests/openpgp/samplekeys/: E657FB607BB4F21C90BB6651BC067AF28BC90111.asc  README  alice-marker.sec.asc  authenticate-only.pub.asc  authenticate-only.sec.asc  dda252ebb8ebe1af-1.asc  dda252ebb8ebe1af-2.asc  e2e-p256-1-clr.asc  e2e-p256-1-prt.asc  ecc-sample-1-pub.asc  ecc-sample-1-sec.asc  ecc-sample-2-pub.asc  ecc-sample-2-sec.asc  ecc-sample-3-pub.asc  ecc-sample-3-sec.asc  ecc-sample-4-pub.asc  ecc-sample-4-sec.asc  eddsa-sample-1-sec.asc  issue2346.gpg  no-creation-time.gpg  rsa-primary-auth-only.pub.asc  rsa-primary-auth-only.sec.asc  rsa-rsa-sample-1.asc  silent-running.asc  ssh-dsa.key  ssh-ecdsa.key  ssh-ed25519.key  ssh-rsa.key  whats-new-in-2.1.asc
tests/openpgp/samplemsgs/: clearsig-1-key-1.asc  clearsig-2-keys-1.asc  clearsig-2-keys-2.asc  enc-1-key-1.asc  enc-1-key-1.pgp  enc-1-key-2.asc  enc-1-key-2.pgp  enc-2-keys-1.asc  enc-2-keys-1.pgp  enc-2-keys-2.asc  enc-2-keys-2.gpg  enc-2-keys-hh-1.asc  enc-2-keys-hr-1.asc  enc-2-keys-rh-1.asc  encsig-2-2-keys-3.asc  encsig-2-2-keys-3.gpg  encsig-2-2-keys-4.asc  encsig-2-2-keys-4.gpg  encsig-2-keys-1.asc  encsig-2-keys-1.pgp  encsig-2-keys-2.asc  encsig-2-keys-2.pgp  encsig-2-keys-3.asc  encsig-2-keys-3.pgp  encsig-2-keys-4.asc  encsig-2-keys-4.gpg  encz0-1-key-1.asc  encz0-1-key-2.asc  issue2419.asc  revoke-2D727CC768697734.asc  sig-1-key-1.asc  sig-1-key-1.sig  sig-1-key-2.asc  sig-1-key-2.sig  sig-2-keys-1.asc  sig-2-keys-1.sig  sig-2-keys-2.asc  sig-2-keys-2.sig  signed-1-key-1.asc  signed-1-key-1.pgp  (+12 more)
tests/openpgp/tofu/conflicting/: 1C005AF3-1.txt  1C005AF3-2.txt  1C005AF3-3.txt  1C005AF3-4.txt  1C005AF3-5.txt  1C005AF3-secret.pgp  1C005AF3.gpg  B662E42F-1.txt  B662E42F-2.txt  B662E42F-3.txt  B662E42F-4.txt  B662E42F-5.txt  B662E42F-secret.pgp  B662E42F.gpg  BE04EB2B-1.txt  BE04EB2B-2.txt  BE04EB2B-3.txt  BE04EB2B-4.txt  BE04EB2B-5.txt  BE04EB2B-secret.pgp  BE04EB2B.pgp  README
tests/openpgp/tofu/cross-sigs/: 871C2247-1.pgp  871C2247-1.txt  871C2247-2.gpg  871C2247-2.txt  871C2247-3.pgp  871C2247-4.pgp  871C2247-secret.gpg  EC38277E-1.pgp  EC38277E-1.txt  EC38277E-2.gpg  EC38277E-2.txt  EC38277E-3.txt  EC38277E-secret.pgp  README
tests/openpgp/trust-pgp/: alice.sec.asc  bobby.sec.asc  carol.sec.asc  common.scm  david.sec.asc  frank.sec.asc  grace.sec.asc  heidi.sec.asc  scenario1.asc  scenario2.asc  scenario3.asc  scenario4.asc
(+503 files in other folders)
