[package]
name = "pgp"
version = "0.18.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "OpenPGP implementation in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rpgp/rpgp"
repository = "https://github.com/rpgp/rpgp"
readme = "README.md"
resolver = "2"

keywords = ["pgp", "gpg", "openpgp", "email", "encryption"]
categories = ["cryptography", "email"]

exclude = ["tests/tests/*"]

edition = "2021"
rust-version = "1.88"

[lib]
bench = false

[dependencies]

# General
base64 = ">=0.21.7, < 0.23"
buffer-redux = { version = "1.0.0", default-features = false }
bitfields = "1.0.0"
bytes = "1.9.0"
byteorder = "1.4"
derive_builder = "0.20.0"
hex = "0.4"
nom = "8.0"
log = "0.4.22"
smallvec = "1.10.0"
derive_more = { version = "2.0.1", features = ["debug", "display"] }
regex = "1.7"
snafu = { version = "0.8.5", features = ["rust_1_81"] }

# Compression
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
bzip2 = { version = "0.6.0", optional = true }

# Crypto
aes = "0.9.0-rc.2"
aead = { version = "0.6.0-rc.3", default-features = false, features = ["bytes", "rand_core"] }
argon2 = { version = "0.6.0-rc.2", default-features = false, features = ["alloc", "zeroize"] }
block-padding = "0.4.0"
blowfish = "0.10.0-rc.2"
camellia = "=0.2.0-pre"
cast5 = "=0.12.0-pre"
cfb-mode = "0.9.0-rc.1"
cipher = "0.5.0-rc.2"
const-oid = "0.10"
crc24 = "0.1.6"
crypto-bigint = { version = "0.7.0-rc.10", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "5.0.0-pre.2", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
] }
des = "0.9.0-rc.2"
digest = "0.11.0-rc.4"
dsa = { version = "0.7.0-rc.7", features = [ "hazmat" ] }
ecdsa = { version =  "0.17.0-rc.9", default-features = false }
ed25519-dalek = { version = "=3.0.0-pre.2", default-features = false, features = ["alloc", "fast", "rand_core", "zeroize"] }
elliptic-curve = { version = "0.14.0-rc.17", default-features = false, features = ["alloc", "sec1"] }
hybrid-array = "0.4.5"
idea = "=0.6.0-pre"
md-5 = { version = "0.11.0-rc.3", features = ["oid"] }
num_enum = ">=0.5.7, < 0.8"
p256 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa", "ecdh"] }
p384 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa"] }
p521 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa", "ecdh"] }
k256 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa"] }
rand = { version = "0.10.0-rc.5", default-features = false }
ripemd = { version = "0.2.0-rc.3", features = ["oid"] }
rsa = { version = "0.10.0-rc.10", default-features = false }
sha1 = { version = "0.11.0-rc.3", features = ["oid"] }
sha1-asm = { version = "0.5.3", optional = true }
sha1-checked = { version = "=0.11.0-pre", features = ["zeroize"] }
sha2 = { version = "0.11.0-rc.3", features = ["oid"] }
sha3 = { version = "0.11.0-rc.3", features = ["oid"] }
signature = "3.0.0-rc.5"
twofish = "=0.8.0-pre"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hkdf = "0.13.0-rc.3"
aes-gcm = { version = "0.11.0-rc.2", default-features = false, features = ["aes"] }
eax = { version = "0.6.0-rc.2", default-features = false }
ocb3 = { version = "0.2.0-rc.2", default-features = false }
aes-kw = { version = "0.3.0-rc.1" }
ed448-goldilocks = { version = "0.14.0-pre.4", default-features = false, features = ["signing"] }
x448 = { version = "0.14.0-pre.1", default-features = false, features = ["static_secrets"] }
x25519-dalek = { version = "=3.0.0-pre.2", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
    "static_secrets",
] }

# PQC
ml-kem = { version = "0.3.0-pre.2", features = ["zeroize", "deterministic"], optional = true }
ml-dsa = { version = "0.1.0-rc.2", features = ["zeroize"], optional = true }
slh-dsa = { version = "0.2.0-rc.1", optional = true }
replace_with = "0.1.8"


[dev-dependencies]
glob = "0.3"
hex-literal = "1"
pretty_assertions = "1"
pretty_env_logger = "0.5"
rand_xorshift = "0.5.0-rc.0"
rand = "0.10.0-rc.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.47"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14.0"
proptest = { version = "1.6.0", features = ["proptest-macro"] }
proptest-derive = "0.5.1"
escape_string = "0.1.2"
testresult = "0.4.1"
chacha20 = { version = "0.10.0-rc.5", features = ["rng"] }
p256 = { version = "0.14.0-rc.1" }
pkcs8 = { version = "0.11.0-rc.8", default-features = false, features = ["std", "pem"] }
rsa = { version = "0.10.0-rc.10", default-features = false, features = ["encoding"] }

[features]
default = ["bzip2"]

# See README.md for features documentation
bzip2 = ["dep:bzip2"]
asm = ["dep:sha1-asm"]
wasm = []

malformed-artifact-compat = []

draft-pqc = ["dep:ml-kem", "dep:ml-dsa", "dep:slh-dsa"]
draft-wussler-openpgp-forwarding = []

[profile.bench]
debug = 2

[[bench]]
name = "benches_main"
harness = false

[patch.crates-io]
ed448-goldilocks = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
x448             = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

camellia = { git = "https://github.com/RustCrypto/block-ciphers.git" }
cast5    = { git = "https://github.com/RustCrypto/block-ciphers.git" }
idea     = { git = "https://github.com/RustCrypto/block-ciphers.git" }
twofish  = { git = "https://github.com/RustCrypto/block-ciphers.git" }

sha1-checked = { git = "https://github.com/RustCrypto/hashes.git" }

ml-kem = { git = "https://github.com/RustCrypto/KEMs.git" }

rand_core = { git = "https://github.com/rust-random/rand_core.git" }
