[package]
name = "pgp"
version = "0.16.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "OpenPGP implementation in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rpgp/rpgp"
repository = "https://github.com/rpgp/rpgp"
readme = "README.md"
resolver = "2"

keywords = ["pgp", "gpg", "openpgp", "email", "encryption"]
categories = ["cryptography", "email"]

exclude = ["tests/tests/*"]

edition = "2021"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]

# General
base64 = ">=0.21.7, < 0.23"
buffer-redux = { version = "1.0.0", default-features = false }
bitfields = "0.12.3"
bytes = "1.9.0"
byteorder = "1.4"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "std",
] }
derive_builder = "0.20.0"
hex = "0.4"
nom = "8.0"
log = "0.4.22"
smallvec = "1.10.0"
derive_more = { version = "2.0.1", features = ["debug", "display"] }
regex = "1.7"
snafu = { version = "0.8.5", features = ["rust_1_81"] }

# Compression
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
bzip2 = { version = "0.5.2", default-features = false, features = ["libbz2-rs-sys"], optional = true }

# Crypto
aes = "0.9.0-rc.0"
aead = { version = "0.6.0-rc.0", default-features = false, features = ["bytes", "rand_core"] }
argon2 = { version = "0.6.0-rc.0", default-features = false, features = ["alloc", "zeroize"] }
block-padding = "0.4.0-rc.3"
blowfish = "0.10.0-rc.0"
camellia = "=0.2.0-pre"
cast5 = "=0.12.0-pre"
cfb-mode = "0.9.0-rc.0"
cipher = "0.5.0-rc.0"
const-oid = "0.10"
crc24 = "0.1.6"
crypto-bigint = { version = "=0.7.0-pre.5", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
] }
des = "0.9.0-rc.0"
digest = "0.11.0-rc.0"
dsa = { version = "0.7.0-rc.0", features = [ "hazmat" ] }
ecdsa = { version =  "0.17.0-rc.2", default-features = false }
ed25519-dalek = { version = "=2.2.0-pre", default-features = false, features = ["alloc", "fast", "rand_core"] }
elliptic-curve = "0.14.0-rc.7"
hybrid-array = "0.3"
idea = "=0.6.0-pre"
md-5 = { version = "0.11.0-rc.0", features = ["oid"] }
num_enum = ">=0.5.7, < 0.8"
num-traits = "0.2.19"
p256 = { version = "=0.14.0-pre.8", default-features = false, features = ["ecdsa", "ecdh"] }
p384 = { version = "=0.14.0-pre.8", default-features = false, features = ["ecdsa"] }
p521 = { version = "=0.14.0-pre.8", default-features = false, features = ["ecdsa", "ecdh"] }
k256 = { version = "=0.14.0-pre.8", default-features = false, features = ["ecdsa"] }
rand = { version = "0.9", default-features = false }
ripemd = { version = "0.2.0-rc.0", features = ["oid"] }
rsa = { version = "0.10.0-rc.0", default-features = false }
sha1 = { version = "0.11.0-rc.0", features = ["oid"] }
sha1-asm = { version = "0.5.3", optional = true }
sha1-checked = { version = "=0.11.0-pre", features = ["zeroize"] }
sha2 = { version = "0.11.0-rc.0", features = ["oid"] }
sha3 = { version = "0.11.0-rc.0", features = ["oid"] }
signature = "3.0.0-rc.1"
twofish = "=0.8.0-pre"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hkdf = "0.13.0-rc.0"
aes-gcm = { version = "0.11.0-rc.0", default-features = false, features = ["aes"] }
eax = { version = "=0.6.0-pre", default-features = false }
ocb3 = { version = "=0.2.0-pre", default-features = false }
aes-kw = { version = "0.3.0-rc.0" }
ed448-goldilocks = { version = "0.14.0-pre.1" }
x448 = { version = "0.7.0-pre" }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "precomputed-tables",
    "zeroize",
    "static_secrets",
] }

# PQC
ml-kem = { version = "=0.3.0-pre", features = ["zeroize", "deterministic"], optional = true }
ml-dsa = { version = "=0.1.0-pre.2", features = ["zeroize"], optional = true }
slh-dsa = { version = "=0.2.0-pre", optional = true }


[dev-dependencies]
glob = "0.3"
hex-literal = "0.4"
pretty_assertions = "1"
pretty_env_logger = "0.5"
rand = { version = "0.9" }
rand_chacha = "0.9"
rand_xorshift = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.47"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14.0"
proptest = { version = "1.6.0", features = ["proptest-macro"] }
proptest-derive = "0.5.1"
escape_string = "0.1.2"
testresult = "0.4.1"
p256 = { version = "=0.14.0-pre.8" }
pkcs8 = { version = "0.11.0-rc.3", default-features = false, features = ["std", "pem"] }

[features]
default = ["bzip2"]

# Enables bzip2 support
bzip2 = ["dep:bzip2"]
# Enables assembly based optimizations
asm = ["dep:sha1-asm"]
# Allows building for wasm
wasm = ["chrono/wasmbind"]

# Enables implementation of draft-ietf-openpgp-pqc-10
# This is unstable and can have breaking changes in patch releases.
# DO NOT USE IN PRODUCTION!
draft-pqc = ["dep:ml-kem", "dep:ml-dsa", "dep:slh-dsa"]


[profile.bench]
debug = 2

[[bench]]
name = "benches_main"
harness = false

[patch.crates-io]
kem = { git = "https://github.com/RustCrypto/traits.git" }

x448 = { git = "https://github.com/baloo/elliptic-curves.git", branch = "baloo/x448-initial-import" }

ed25519 = { git = "https://github.com/RustCrypto/signatures.git" }
ml-dsa  = { git = "https://github.com/RustCrypto/signatures.git" }
slh-dsa = { git = "https://github.com/RustCrypto/signatures.git" }

eax         = { git = "https://github.com/RustCrypto/AEADs.git" }
ocb3        = { git = "https://github.com/RustCrypto/AEADs.git" }

camellia = { git = "https://github.com/RustCrypto/block-ciphers.git" }
cast5    = { git = "https://github.com/RustCrypto/block-ciphers.git" }
idea     = { git = "https://github.com/RustCrypto/block-ciphers.git" }
twofish  = { git = "https://github.com/RustCrypto/block-ciphers.git" }

sha1-checked = { git = "https://github.com/RustCrypto/hashes.git" }

block-padding = { git = "https://github.com/RustCrypto/utils.git" }

curve25519-dalek = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/msrv-1.85" }
ed25519-dalek    = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/msrv-1.85" }

ml-kem = { git = "https://github.com/RustCrypto/KEMs.git" }
