[package]
name = "pgp_ffi"
version = "0.1.0"
homepage = "https://github.com/dignifiedquire/rpgp"
description = "PGP implementation in Rust"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
pgp = { path = "../" }
hex = "0.3.2"
libc = "0.2.49"
failure = "0.1.5"
rand = "0.6"
sha2 = "0.8.0"

[build-dependencies]
cbindgen = "0.8"

# [profile.release]
# debuginfo = 0
# opt-level = "s"
# codegen-units = 1
# panic = "abort"
# lto = "thin"

[features]
default = []
nightly = ["pgp/nightly"]
asm = ["pgp/asm", "nightly"]
