[package]
name = "pgp_ffi"
version = "0.1.0"
description = "C-FFI interface for pgp"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rpgp/rpgp"
repository = "https://github.com/rpgp/rpgp"
readme = "README.md"
license = "MIT OR Apache-2.0"

keywords = ["pgp", "gpg", "openpgp", "email", "encryption"]
categories = ["cryptography", "std", "email"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
pgp = { path = "../" }
hex = "0.3.2"
libc = "0.2.49"
failure = "0.1.5"
rand = "0.7"
sha2 = "0.8.0"
smallvec = "1.0.0"

[build-dependencies]
cbindgen = "0.8"

[features]
default = []
nightly = ["pgp/nightly"]
asm = ["pgp/asm", "nightly"]
